--- a/index.html
+++ b/index.html
@@ -124,7 +124,9 @@
 
         </div>
     </div>
-
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+    
     <script src="script.js"></script>
 
 </body>
