Adicinado filtro de Alcoolatras no site

--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                         </select>
                     </div>
                     <div class="control-group">
+                        <label for="metric-selector">Métrica Principal:</label>
+                        <select id="metric-selector">
+                            <option value="smokers">Fumantes</option>
+                            <option value="drinkers">Alcoólatras</option> 
+                        </select>
+                    </div>
+                    <div class="control-group">
                         <label>Idade (anos):</label>
                         <div class="input-group">
                             <input type="number" id="min-age" placeholder="Min">
